# AnanthamEngine

./: .markdownlint.json  .prettierrc  Cargo.toml  README.md
anantham_core/: Cargo.toml
anantham_core/src/: app.rs  components.rs  extract.rs  input.rs  lib.rs  plugin.rs  runner.rs
anantham_core/src/app/: log.rs  mod.rs  runner.rs
anantham_core/src/input/: mod.rs
anantham_core/src/log/: mod.rs
anantham_core/src/platform/: handler.rs  input.rs  mod.rs  window.rs  window_controls.rs
anantham_core/src/render_bridge/: components.rs  extract.rs  mod.rs
anantham_core/src/spatial/: camera.rs  mod.rs  transform.rs
anantham_core/src/voxel/: chunk.rs  mesher.rs  mod.rs  registry.rs
anantham_render/: Cargo.toml
anantham_render/shaders/: shader.frag  shader.mesh
anantham_render/src/: context.rs  lib.rs
anantham_render/src/core/: device.rs  mod.rs  swapchain.rs  sync.rs
anantham_render/src/pipeline/: descriptor.rs  graphics.rs  mod.rs
anantham_render/src/resource/: buffer.rs  mod.rs  texture.rs
anantham_sandbox/: Cargo.toml
anantham_sandbox/src/: main.rs
