[workspace]
members = ["anantham_core", "anantham_render", "anantham_sandbox"]
resolver = "2"

[workspace.dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
anantham_core = { path = "anantham_core" }
anantham_render = { path = "anantham_render" }
raw-window-handle = "0.6.2"
winit = "0.30.13"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
shaderc = "0.10.1"
glam = { version = "0.32.1", features = ["bytemuck"] }
bevy_ecs = "0.18.1"
gpu-allocator = "0.28.0"
bytemuck = "1.25.0"
noise = "0.9.0"
bevy_app = "0.18.1"
bevy_tasks = "0.18.1"
futures-lite = "2.6.1"
bevy_input = { version = "0.18.1", features = ["mouse", "keyboard"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
