[package]
name = "anantham_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }
tracing-subscriber = { workspace = true }
glam.workspace = true
bytemuck = { workspace = true }
bevy_app = { workspace = true }
bevy_tasks = { workspace = true }
futures-lite = { workspace = true }
