[package]
name = "anantham_render"
version = "0.1.0"
edition = "2024"

[dependencies]
anantham_core = { workspace = true }
ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
bevy_ecs = { workspace = true }
winit = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
shaderc = { workspace = true }
